--- a/patient/templates/home.html
+++ b/patient/templates/home.html
@@ -3,7 +3,7 @@
 {% block content  %}
 
 <div class='container mb-6 mt-2 p-4'>
-    <form action="{% url 'predict' %}" class="row g-3 needs-validation" novalidate>
+    <form action="{% url 'patient' %}" class="row g-3 needs-validation" novalidate>
         <div class='col-md-12'>
             {% csrf_token %}
             <div class='col-md-8'>
